--- a/README
+++ b/README
@@ -36,7 +36,8 @@ Movements :
 You will find an example class in this repository.
 You can use the ActionScript3 native event system or the as3 Signal develop by Robert Penner. ( <https://github.com/robertpenner/as3-signals/> )
 
-<pre><code>//instantiation of an ActionManager with the stage frame rate in parameter in order to compute the gestures analysis
+```actionscript
+//instantiation of an ActionManager with the stage frame rate in parameter in order to compute the gestures analysis
 _actionManager = new ActionManager(stage.frameRate);
 
 //creation of a gesture to track the left swipe with the left hand
@@ -48,27 +49,30 @@ rightHandLeftSwipe.dispatcher.addEventListener(KinectGestureEvent.LEFT_SWIPE, _l
 
 //in order to works, don't forget to add your gestures and / or movements to your ActionManager instance
 _actionManager.add(rightHandLeftSwipe);
-</code></pre>
+```
 
 Then in your enterFrame handler, add this line.
 
-<pre><code>//ask your ActionManager to compute and analyze user's actions
+```actionscript
+//ask your ActionManager to compute and analyze user's actions
 _actionManager.compute(user);
-</code></pre>
+```
 
 Here some code to show you how to use Signal instead of ActionScript3 Event.
 
-<pre><code>//by default, the dispatcher of all AUserAction will be an EventDispatcher but you can also use
+```actionscript
+//by default, the dispatcher of all AUserAction will be an EventDispatcher but you can also use
 //the AS3 Signals by passing an instance of ActionSignalDispatcher to the AUserAction instance
 var jumpMovement : JumpMovement = new JumpMovement(new ActionSignalDispatcher());
 jumpMovement.dispatcher.addSignalListener(_jumpMovementOccured);
 //for a signal dispatcher, you can remove your listener this way
 //jumpMovement.dispatcher.removeSignalListener(_jumpMovementOccured);
-</code></pre>
+```
 
 Multiple gesture manager.
 
-<pre><code>//rather than create two gestures (UpSwipe and DownSwipe for example) you can use
+```actionscript
+//rather than create two gestures (UpSwipe and DownSwipe for example) you can use
 //a VerticalSwipe to handle two gestures in only one instance
 var leftHandVerticalSwipe : VerticalSwipe = new VerticalSwipe(GesturePart.LEFT_HAND);
 leftHandVerticalSwipe.dispatcher.addEventListener(KinectGestureEvent.UP_SWIPE, _upSwipeWithLeftHandOccured);
@@ -76,7 +80,7 @@ leftHandVerticalSwipe.dispatcher.addEventListener(KinectGestureEvent.DOWN_SWIPE,
 //remove event listener like shown below
 //leftHandVerticalSwipe.dispatcher.removeEventListener(KinectGestureEvent.UP_SWIPE, _upSwipeWithLeftHandOccured);
 //leftHandVerticalSwipe.dispatcher.removeEventListener(KinectGestureEvent.DOWN_SWIPE, _downSwipeWithLeftHandOccured);
-  		
+          
 //if you want to use Signal dispatcher with a two gestures handler (HorizontalSwipe, VerticalSwipe or DepthSwipe)
 //you can listen to your signal callback with the method below
 var leftFootHorizontalSwipe : HorizontalSwipe = new HorizontalSwipe(GesturePart.LEFT_FOOT, new ActionSignalDispatcher());
@@ -85,7 +89,7 @@ ActionSignalDispatcher(leftFootHorizontalSwipe.dispatcher).addSecondSignalListen
 //with the same logic, you can easily remove your signal listener
 //leftFootHorizontalSwipe.dispatcher.removeSignalListener(_horizontalLeftFootSwipeDirectionOne);
 //ActionSignalDispatcher(leftFootHorizontalSwipe.dispatcher).removeSecondSignalListener(_horizontalLeftFootSwipeDirectionTwo);
-</code></pre>
+```
 
 ##Contact
 
